--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+.background{
+  background: rgba(0,0,0,0.5);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
