--- a/src/components/Movie-catalog/Movie-details/MovieDetails.css
+++ b/src/components/Movie-catalog/Movie-details/MovieDetails.css
@@ -4,4 +4,18 @@
     left: 50%;
     background: rgba(0,0,0,0.5);
     color:#ffff;
+    display: block;
+}
+
+
+.close-modal{
+    display: none;
+}
+.overlay {
+    box-sizing: content-box;
+    background-color: rgba(59, 67, 76, 0.9);
+    width: 100%;
+    height: 100%;
+    margin: -50px 0;
+    padding: inherit;
 }
