--- a/src/components/Movie-catalog/MovieItem.css
+++ b/src/components/Movie-catalog/MovieItem.css
@@ -2,6 +2,10 @@
 
     width: 25%;
 }
+
+.section:hover {
+    transform: scale(1.02);
+}
 .movieCatalog{
     display: flex;
     flex-wrap: wrap;
@@ -16,27 +20,38 @@
 box-shadow:  0 0 7px rgba(0,0,0,0.5);
     margin: 20px 20px;
 }
-.movieInfo{
-    width: 100%;
+.movie__info__text{
+    margin-right: 4vw;
+}
+.movie__info {
+    display: flex;
+    justify-content: space-between;
+    padding: 7px;
     position: relative;
 }
-.title{
-    font: 600 20px 'Quicksand', sans-serif;
+.movie__info__text {
+    margin-right: -2px;
+}
+.movie__info__text h4 {
     text-transform: uppercase;
-    min-height: 20px;
-    padding: 5px 50px 2px 5px;
+    margin-bottom: 7px;
+    padding-right: 75px;
+    font: 600 16px 'Quicksand', sans-serif;
 }
-.release-date{
+.movie__info__text p {
+    color: #3b3637;
+    font-size: 12px;
+    margin-bottom: 7px;
+    padding-right: 40px;
+}
+.movie__info__year p {
+    border: 1px solid #3b3637;
+    font-size: 2vh;
+    padding: 3px;
+    line-height: 1;
     position: absolute;
-    top: 5px;
-    right:5px;
-    border: 1px solid rgba(0,0,0,0.5);
-    padding: 2px 4px;
-    font: 500 14px 'Quicksand', sans-serif;
-}
-.genres{
-    width: 100%;
-    padding: 5px 10px 0 0;
-    font: 500 12px 'Quicksand', sans-serif;
-    padding:0 0 5px 5px;
+    top: 10px;
+    right: 5px;
+    margin-bottom: 3px;
+
 }
