--- a/src/components/Movie-catalog/MovieItem.css
+++ b/src/components/Movie-catalog/MovieItem.css
@@ -1,10 +1,10 @@
 .section{
 
-    width: 25%;
+    width: 25.5%;
 }
 
 .section:hover {
-    transform: scale(1.02);
+    transform:scale(1.02) ;
 }
 .movieCatalog{
     display: flex;
@@ -28,9 +28,13 @@ box-shadow:  0 0 7px rgba(0,0,0,0.5);
     justify-content: space-between;
     padding: 7px;
     position: relative;
+
+    overflow: hidden;
+
 }
 .movie__info__text {
     margin-right: -2px;
+
 }
 .movie__info__text h4 {
     text-transform: uppercase;
@@ -42,6 +46,7 @@ box-shadow:  0 0 7px rgba(0,0,0,0.5);
     color: #3b3637;
     font-size: 12px;
     margin-bottom: 7px;
+
     padding-right: 40px;
 }
 .movie__info__year p {
